Fixed footer alignment issues, fixed CSE validator issues.

--- a/fuccios/public_html/css/style_sheet.css
+++ b/fuccios/public_html/css/style_sheet.css
@@ -36,7 +36,7 @@ header {
 
 section{
     background-color: #FFF;
-    padding-left: : 10px
+    padding-left: 10px;
     border-color: black;
     border-style: dotted;
     border-width: 5px;
